== 0.2.2

* fixed some issues around array imports and exports

== 0.2.1

* fixed URI resolution when base URI is missing

== 0.2.0

* added support for union types
* added support for recursive references
* fixed vestigial code from refactoring extraction
* fixed issue with references when schema URI is not supplied
* fixed issue with missing gem dependencies

== 0.1.0

* initial release