@@ -1,6 +1,8 @@
 == 0.2.2
 
+* the AutoParse.generate method was changed to use an options Hash
 * fixed some issues around array imports and exports
+* schemas of type object should now correctly inherit their id URI values
 
 == 0.2.1
 
